--- a/Dockerfile.Kylin
+++ b/Dockerfile.Kylin
@@ -6,7 +6,7 @@ ARG TARGETPLATFORM
 #ADD kylin-rootfs-v11-amd64.tar.xz /
 ADD  kylin-rootfs-v11-${TARGETARCH}.tar.xz /
 
-#ENV TZ=Asia/Shanghai LANG=en_US.UTF-8 UMASK=0022 CATALINA_HOME=/usr/local/tomcat CATALINA_BASE=/app/tomcat TOMCAT_MAJOR=9
+#ENV TZ=Asia/Shanghai LANG=en_US.UTF-8 UMASK=0022 CATALINA_HOME=/usr/local/tomcat CATALINA_BASE=/app/tomcat TOMCAT_MAJOR=9  JAVA_HOME=/usr/lib/jvm/temurin-21-jdk
 #ENV PATH=$CATALINA_HOME/bin:/usr/java/latest/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 #ENV XMX_OPTS=" -XX:InitialRAMPercentage=50.0 -XX:MaxRAMPercentage=60.0 "
 #ENV SW_AGENT_COLLECTOR_BACKEND_SERVICES=127.0.0.1:11800
