--- a/Dockerfile.Kylin
+++ b/Dockerfile.Kylin
@@ -6,23 +6,19 @@ ARG TARGETPLATFORM
 #ADD kylin-rootfs-v11-amd64.tar.xz /
 ADD  kylin-rootfs-v11-${TARGETARCH}.tar.xz /
 
-#ENV TZ=Asia/Shanghai LANG=en_US.UTF-8 UMASK=0022 CATALINA_HOME=/usr/local/tomcat CATALINA_BASE=/app/tomcat TOMCAT_MAJOR=9  JAVA_HOME=/usr/lib/jvm/temurin-21-jdk
-#ENV PATH=$CATALINA_HOME/bin:/usr/java/latest/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-#ENV XMX_OPTS=" -XX:InitialRAMPercentage=50.0 -XX:MaxRAMPercentage=60.0 "
-#ENV SW_AGENT_COLLECTOR_BACKEND_SERVICES=127.0.0.1:11800
+ENV TZ=Asia/Shanghai LANG=en_US.UTF-8 UMASK=0022 CATALINA_HOME=/usr/local/tomcat CATALINA_BASE=/app/tomcat TOMCAT_MAJOR=9  
+ENV PATH=$CATALINA_HOME/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+ENV XMX_OPTS=" -XX:InitialRAMPercentage=50.0 -XX:MaxRAMPercentage=60.0 "
+ENV JAVA_TOOL_OPTIONS="${JAVA_OPTS} ${JAVA_EXT_OPTS} ${XMX_OPTS} ${JAVA_AGENT_OPTS} ${JAVA_AGENT_SKYWALKING_OPTS}"
 
+#ENV SW_AGENT_COLLECTOR_BACKEND_SERVICES=127.0.0.1:11800
 #ENV JMX_EXPT=5556 JMX_PORT=5555
 #ENV JAVA_AGENT_PROMETHEUS_OPTS=" -javaagent:/app/jmx/jmx_prometheus_javaagent.jar=${JMX_EXPT}:/app/jmx/config.yaml"
 #ENV JAVA_AGENT_SKYWALKING_OPTS=" -javaagent:/app/skywalking/skywalking-agent.jar"
-
-#ENV JAVA_TOOL_OPTIONS="${JAVA_OPTS} ${JAVA_EXT_OPTS} ${XMX_OPTS} ${JAVA_AGENT_OPTS} ${JAVA_AGENT_SKYWALKING_OPTS}"
-
-
 # ENV JAVA_TOOL_OPTIONS=" -javaagent:/app/skywalking/skywalking-agent.jar -javaagent:/app/jmx/jmx_prometheus_javaagent.jar=5556:/app/jmx/config.yaml \
 #       -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=5555 -Dcom.sun.management.jmxremote.rmi.port=5555 \
 #       -Dcom.sun.management.jmxremote.host=0.0.0.0 -Djava.rmi.server.hostname=0.0.0.0 -Dcom.sun.management.jmxremote.authenticate=false \
 #       -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.local.only=false "
-
 #  SW_AGENT_COLLECTOR_BACKEND_SERVICES
 
 # https://repo1.maven.org/maven2/com/taobao/arthas/arthas-packaging/4.0.0/arthas-packaging-4.0.0-bin.zip
@@ -35,18 +31,18 @@ ADD  kylin-rootfs-v11-${TARGETARCH}.tar.xz /
 RUN set -eux; adduser -u 8080 -m -s /bin/bash app ;mkdir -p /logs /app /usr/java/jvm ;\
     test -f /etc/apk/repositories && sed -i 's/dl-cdn.alpinelinux.org/mirrors.cloud.tencent.com/g' /etc/apk/repositories || true ;\
     dnf install -y bash  ca-certificates curl wget ;\
-    echo -e 'export TZ=Asia/Shanghai LANG=en_US.UTF-8 UMASK=0022 CATALINA_HOME=/usr/local/tomcat CATALINA_BASE=/app/tomcat TOMCAT_MAJOR=9' | tee /etc/profile.d/91-env.sh ;\
-    echo -e 'export PATH=$JAVA_HOME/bin:/usr/local/tomcat/bin:/usr/java/latest/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:$PATH\nexport JMX_PORT=${JMX_PORT:-"5555"}\nexport JMX_EXPT=${JMX_EXPT:-"5556"}' | tee -a /etc/profile.d/91-env.sh ;\
-    echo -e "export IPV4=\$(ip route get 8.8.8.8 | grep src | awk '{print \$7}')" | tee -a /etc/profile.d/91-env.sh ;\
-    echo -e 'export XMX_OPTS=" -XX:InitialRAMPercentage=50.0 -XX:MaxRAMPercentage=60.0 " ' | tee -a /etc/profile.d/91-env.sh ;\
-    echo -e 'export JDK_JAVA_OPTIONS=" -XX:+IgnoreUnrecognizedVMOptions --enable-native-access=ALL-UNNAMED " ' | tee -a /etc/profile.d/91-env.sh ;\
-    echo -e 'export JMX_HOST1=${IPV4}' | tee -a /etc/profile.d/91-env.sh ;\
+    echo -e 'set +eux;\nexport TZ=Asia/Shanghai LANG=en_US.UTF-8 UMASK=0022 CATALINA_HOME=/usr/local/tomcat CATALINA_BASE=/app/tomcat TOMCAT_MAJOR=9' | tee /etc/profile.d/92-jdk.sh ;\
+    echo -e 'export PATH=$JAVA_HOME/bin:/usr/local/tomcat/bin:/usr/java/latest/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:$PATH\nexport JMX_PORT=${JMX_PORT:-"5555"}\nexport JMX_EXPT=${JMX_EXPT:-"5556"}' | tee -a /etc/profile.d/92-jdk.sh ;\
+    echo -e "export IPV4=\$(ip route get 8.8.8.8 2>/dev/null | grep src | awk '{print \$7}')" | tee -a /etc/profile.d/92-jdk.sh ;\
+    echo -e 'export XMX_OPTS=" -XX:InitialRAMPercentage=50.0 -XX:MaxRAMPercentage=60.0 " ' | tee -a /etc/profile.d/92-jdk.sh ;\
+    echo -e 'export JDK_JAVA_OPTIONS=" -XX:+IgnoreUnrecognizedVMOptions --enable-native-access=ALL-UNNAMED -XX:+UseCompactObjectHeaders  " ' | tee -a /etc/profile.d/92-jdk.sh ;\
+    echo -e 'export JMX_HOST1=${IPV4}' | tee -a /etc/profile.d/92-jdk.sh ;\
     echo -e 'export JMX_OPTS1=" -Dcom.sun.management.jmxremote.port=${JMX_PORT} -Dcom.sun.management.jmxremote.rmi.port=${JMX_PORT}  \
         -Djava.rmi.server.hostname=${JMX_HOST} -Dcom.sun.management.jmxremote.host=${JMX_HOST} \
         -Dcom.sun.management.jmxremote.local.only=false -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false " '\
-        | tee -a /etc/profile.d/91-env.sh ;\
-    echo -e 'export JAVA_TOOL_OPTIONS="${JAVA_OPTS} ${JAVA_EXT_OPTS} ${XMX_OPTS} ${JAVA_AGENT_OPTS} ${JAVA_AGENT_SKYWALKING_OPTS}" ' | tee -a /etc/profile.d/91-env.sh ;\
-    source /etc/profile.d/91-env.sh ; echo $TOMCAT_MAJOR; \
+        | tee -a /etc/profile.d/92-jdk.sh ;\
+    echo -e 'export JAVA_TOOL_OPTIONS="${JAVA_OPTS} ${JAVA_EXT_OPTS} ${XMX_OPTS} ${JAVA_AGENT_OPTS} ${JAVA_AGENT_SKYWALKING_OPTS}" ' | tee -a /etc/profile.d/92-jdk.sh ;\
+    source /etc/profile.d/92-jdk.sh ; echo $TOMCAT_MAJOR; \
     dnf --enablerepo=temurin install temurin-24-jdk java-21-openjdk-devel ;\
     dnf install -y bash ca-certificates curl wget iproute  gnupg libcap openssl  sudo iputils  jq  iptables tzdata \
         procps  iputils  wget tzdata less   unzip  tcpdump  net-tools socat jq mtr psmisc logrotate  tomcat-native \
