--- a/Dockerfile.Kylin
+++ b/Dockerfile.Kylin
@@ -6,7 +6,7 @@ ARG TARGETPLATFORM
 #ADD kylin-rootfs-v11-amd64.tar.xz /
 ADD  kylin-rootfs-v11-${TARGETARCH}.tar.xz /
 
-#ENV TZ=Asia/Shanghai LANG=en_US.UTF-8 UMASK=0022 CATALINA_HOME=/usr/local/tomcat CATALINA_BASE=/app/tomcat TOMCAT_MAJOR=9  
+#ENV TZ=Asia/Shanghai LANG=en_US.UTF-8 UMASK=0022 CATALINA_HOME=/usr/local/tomcat CATALINA_BASE=/app/tomcat TOMCAT_MAJOR=9
 #ENV PATH=$CATALINA_HOME/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 #ENV JAVA_TOOL_OPTIONS="${JAVA_OPTS} ${JAVA_EXT_OPTS} ${XMX_OPTS} ${JAVA_AGENT_OPTS} ${JAVA_AGENT_SKYWALKING_OPTS}"
 
@@ -32,7 +32,7 @@ ADD  kylin-rootfs-v11-${TARGETARCH}.tar.xz /
 # https://mirrors.cloud.tencent.com/nexus/repository/maven-public/io/prometheus/jmx/jmx_prometheus_javaagent/0.17.2/jmx_prometheus_javaagent-0.17.2.jar
 
 # yum only: yum-utils createrepo crontabs curl-minimal dejavu-sans-fonts iproute java-1.8.0-openjdk-devel java-11-openjdk-devel java-21-openjdk-devel telnet traceroute pcre-devel pcre2-devel
-# yum miss:  busybox-extras iproute2 runit dumb-init tini su-exec inetutils-ftp pcre-dev pcre2-dev openssh-client-default atop jemalloc-dev yum-utils curl-minimal java-8-openjdk-devel valkey valkey-cli
+# yum miss:  busybox-extras iproute2 runit dumb-init tini su-exec inetutils-ftp pcre-dev pcre2-dev openssh-client-default atop jemalloc-dev yum-utils curl-minimal java-8-openjdk-devel valkey valkey-cli      
 # alpine: openjdk8 openjdk11-jdk openjdk21-jdk vim font-noto-cjk consul openssl1.1-compat
 
 RUn     dnf install -y bash ca-certificates curl wget tar jq iproute  gnupg libcap openssl  sudo iputils  jq  iptables tzdata \
@@ -66,95 +66,11 @@ RUn     dnf install -y bash ca-certificates curl wget tar jq iproute  gnupg libc
     OTEL_VER=$(wget -q https://mirrors.cloud.tencent.com/nexus/repository/maven-public/io/opentelemetry/javaagent/opentelemetry-javaagent/maven-metadata.xml -O -|grep '<version>'|grep -v -i SNAPSHOT| tail -1 | awk '{split($1,c,">") ; split(c[2],d,"<") ; print d[1]}') ;\
     echo $OTEL_VER;wget -q -c https://mirrors.cloud.tencent.com/nexus/repository/maven-public/io/opentelemetry/javaagent/opentelemetry-javaagent/${OTEL_VER}/opentelemetry-javaagent-${OTEL_VER}.jar -O /app/otel/opentelemetry-javaagent.jar; \
     wget -q -c https://arthas.aliyun.com/download/latest_version?mirror=aliyun -O /tmp/arthas-bin.zip ; unzip /tmp/arthas-bin.zip -d /app/arthas ;\
-    ls -alh /tmp;
-
-
-RUN set -eux; adduser -u 8080 -m -s /bin/bash app ;mkdir -p /logs /app /usr/java/jvm ;\
-    test -f /etc/apk/repositories && sed -i 's/dl-cdn.alpinelinux.org/mirrors.cloud.tencent.com/g' /etc/apk/repositories || true ;\
-    dnf install -y bash  ca-certificates curl wget tar jq ;\
-    echo -e 'set +eux;\nexport TZ=Asia/Shanghai LANG=en_US.UTF-8 UMASK=0022 CATALINA_HOME=/usr/local/tomcat CATALINA_BASE=/app/tomcat JAVA_HOME=/usr/lib/jvm/temurin-21-jdk' | tee /etc/profile.d/92-jdk.sh ;\
-    echo -e 'export PATH=$JAVA_HOME/bin:/usr/local/tomcat/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:$PATH\nexport JMX_PORT=${JMX_PORT:-"5555"}\nexport JMX_EXPT=${JMX_EXPT:-"5556"}' | tee -a /etc/profile.d/92-jdk.sh ;\
-    echo -e "export IPV4=\$(ip route get 8.8.8.8 2>/dev/null | grep src | awk '{print \$7}')" | tee -a /etc/profile.d/92-jdk.sh ;\
-    echo -e 'export XMX_OPTS=" -XX:InitialRAMPercentage=50.0 -XX:MaxRAMPercentage=60.0 " ' | tee -a /etc/profile.d/92-jdk.sh ;\
-    echo -e 'export JDK_JAVA_OPTIONS=" -XX:+IgnoreUnrecognizedVMOptions --enable-native-access=ALL-UNNAMED -XX:+UseCompactObjectHeaders  " ' | tee -a /etc/profile.d/92-jdk.sh ;\
-    echo -e 'export JMX_HOST1=${IPV4}' | tee -a /etc/profile.d/92-jdk.sh ;\
-    echo -e 'export JMX_OPTS1=" -Dcom.sun.management.jmxremote.port=${JMX_PORT} -Dcom.sun.management.jmxremote.rmi.port=${JMX_PORT}  \
-        -Djava.rmi.server.hostname=${JMX_HOST} -Dcom.sun.management.jmxremote.host=${JMX_HOST} \
-        -Dcom.sun.management.jmxremote.local.only=false -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false " '\
-        | tee -a /etc/profile.d/92-jdk.sh ;\
-    echo -e 'export JAVA_TOOL_OPTIONS="${JAVA_OPTS} ${JAVA_EXT_OPTS} ${XMX_OPTS} ${JAVA_AGENT_OPTS} ${JAVA_AGENT_SKYWALKING_OPTS}" ' | tee -a /etc/profile.d/92-jdk.sh ;\
-FROM --platform=${BUILDPLATFORM:-linux/amd64} scratch
-ARG TARGETOS
-ARG TARGETARCH
-ARG TARGETPLATFORM
-
-#ADD kylin-rootfs-v11-amd64.tar.xz /
-ADD  kylin-rootfs-v11-${TARGETARCH}.tar.xz /
-
-#ENV TZ=Asia/Shanghai LANG=en_US.UTF-8 UMASK=0022 CATALINA_HOME=/usr/local/tomcat CATALINA_BASE=/app/tomcat TOMCAT_MAJOR=9  
-#ENV PATH=$CATALINA_HOME/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-#ENV JAVA_TOOL_OPTIONS="${JAVA_OPTS} ${JAVA_EXT_OPTS} ${XMX_OPTS} ${JAVA_AGENT_OPTS} ${JAVA_AGENT_SKYWALKING_OPTS}"
-
-#ENV SW_AGENT_COLLECTOR_BACKEND_SERVICES=127.0.0.1:11800
-#ENV JMX_EXPT=5556 JMX_PORT=5555
-#ENV JAVA_AGENT_PROMETHEUS_OPTS=" -javaagent:/app/jmx/jmx_prometheus_javaagent.jar=${JMX_EXPT}:/app/jmx/config.yaml"
-#ENV JAVA_AGENT_SKYWALKING_OPTS=" -javaagent:/app/skywalking/skywalking-agent.jar"
-# ENV JAVA_TOOL_OPTIONS=" -javaagent:/app/skywalking/skywalking-agent.jar -javaagent:/app/jmx/jmx_prometheus_javaagent.jar=5556:/app/jmx/config.yaml \
-#       -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=5555 -Dcom.sun.management.jmxremote.rmi.port=5555 \
-#       -Dcom.sun.management.jmxremote.host=0.0.0.0 -Djava.rmi.server.hostname=0.0.0.0 -Dcom.sun.management.jmxremote.authenticate=false \
-#       -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.local.only=false "
-#  SW_AGENT_COLLECTOR_BACKEND_SERVICES
-
-# https://mirrors.aliyun.com/anolis/8/Plus/x86_64/os/Packages
-# https://mirrors.aliyun.com/alinux/3/plus/x86_64/Packages  java-21-alibaba-dragonwell java-1.8.0-alibaba-dragonwell
-
-# https://dragonwell-jdk.io/releases.json
-
-# dnf --enablerepo=temurin install temurin-24-jdk java-21-openjdk-devel ;\
-
-# https://repo1.maven.org/maven2/com/taobao/arthas/arthas-packaging/4.0.0/arthas-packaging-4.0.0-bin.zip
-# https://repo1.maven.org/maven2/io/prometheus/jmx/jmx_prometheus_javaagent/0.17.2/jmx_prometheus_javaagent-0.17.2.jar
-# https://mirrors.cloud.tencent.com/nexus/repository/maven-public/io/prometheus/jmx/jmx_prometheus_javaagent/0.17.2/jmx_prometheus_javaagent-0.17.2.jar
-
-# yum only: yum-utils createrepo crontabs curl-minimal dejavu-sans-fonts iproute java-1.8.0-openjdk-devel java-11-openjdk-devel java-21-openjdk-devel telnet traceroute pcre-devel pcre2-devel
-# yum miss:  busybox-extras iproute2 runit dumb-init tini su-exec inetutils-ftp pcre-dev pcre2-dev openssh-client-default atop jemalloc-dev yum-utils curl-minimal java-8-openjdk-devel valkey valkey-cli
-# alpine: openjdk8 openjdk11-jdk openjdk21-jdk vim font-noto-cjk consul openssl1.1-compat
-
-RUn     dnf install -y bash ca-certificates curl wget tar jq iproute  gnupg libcap openssl  sudo iputils  jq  iptables tzdata \
-        procps  iputils  wget tzdata less   unzip  tcpdump  net-tools socat jq mtr psmisc logrotate  tomcat-native \
-        htop iftop tmux   \
-        createrepo crontabs dejavu-sans-fonts iproute  telnet traceroute pcre-devel pcre2-devel jemalloc-devel openssl-devel zlib-devel vim redis6 ;\
-        chmod u+s /bin/ping /usr/sbin/tcpdump /usr/bin/tcpdump   ||true; \
-    mkdir -p /logs /usr/local/tomcat /app/tomcat/conf /app/tomcat/logs /app/tomcat/work /app/tomcat/bin /app/tomcat/temp /app/tomcat/lib/org/apache/catalina/util /app/lib /app/tmp /app/bin /app/war /app/jmx /app/skywalking  /app/otel /app/file ; \
-    url8=$(wget -q https://dragonwell-jdk.io/releases.json -O - | jq '.oss.extended.aurl8 , .oss.extended.xurl8'   |grep $(uname -m |sed  -e 's/86_//g')|sed -e 's/\"//g');\
-    url21=$(wget -q https://dragonwell-jdk.io/releases.json -O - | jq '.oss.extended.aurl21 , .oss.extended.xurl21'   |grep $(uname -m |sed  -e 's/86_//g')|sed -e 's/\"//g');\
-    wget -q -c $url8 $url21 -P /tmp ;\
-    mkdir -p /usr/lib/jvm/java-1.8.0-openjdk /usr/lib/jvm/java-21-openjdk ;\
-    tar zxf /tmp/Alibaba_Dragonwell_Extended_8.*.tar.gz  -C /usr/lib/jvm/java-1.8.0-openjdk --strip-components 1 ;\
-    tar zxf /tmp/Alibaba_Dragonwell_Extended_21.*.tar.gz -C /usr/lib/jvm/java-21-openjdk --strip-components 1 ;\
-    TOMCAT_MAJOR=9;TOMCAT_VER=`wget -q https://mirrors.cloud.tencent.com/apache/tomcat/tomcat-${TOMCAT_MAJOR}/ -O - | grep -v M|grep v${TOMCAT_MAJOR}|tail -1|awk '{split($0,c,"<a") ; split(c[2],d,"/") ;split(d[1],e,"v") ; print e[2]}'` ;\
-    echo $TOMCAT_VER;wget -q -c https://mirrors.cloud.tencent.com/apache/tomcat/tomcat-${TOMCAT_MAJOR}/v${TOMCAT_VER}/bin/apache-tomcat-${TOMCAT_VER}.tar.gz -P /tmp ;\
-    tar zxf /tmp/apache-tomcat-${TOMCAT_VER}.tar.gz -C /usr/local/tomcat --strip-components 1 ;\
-    cp -rv /usr/local/tomcat/conf/* /app/tomcat/conf/ ;\
-    rm -rf /usr/local/tomcat/webapps/* /app/tomcat/conf/context.xml || true;\
-    sed -i -e 's@webapps@/app/war@g' -e 's@SHUTDOWN@UP_8001@g' /app/tomcat/conf/server.xml ;\
-    sed -i -e 's/maxParameterCount="1000"$/maxParameterCount="1000" maxHttpHeaderSize="65536"  maxConnections="16384" \n maxThreads="2000" minSpareThreads="10" \
-    acceptCount="1500" \n keepAliveTimeout="30000" enableLookups="false"  disableUploadTimeout="true"/g'  /app/tomcat/conf/server.xml;\
-    echo -e "server.info=WAF\nserver.number=\nserver.built=\n" | tee /app/tomcat/lib/org/apache/catalina/util/ServerInfo.properties ;\
-    echo "<tomcat-users/>" | tee  /app/tomcat/conf/tomcat-users.xml ;\
-    SKYWALKING_AGENT_VER=`wget -q http://mirrors.cloud.tencent.com/apache/skywalking/java-agent/ -O - |grep 'href'|tail -1 | awk '{split($2,c,">") ; split(c[2],d,"/<") ; print d[1]}'` ;\
-    echo $SKYWALKING_AGENT_VER;wget -q -c http://mirrors.cloud.tencent.com/apache/skywalking/java-agent/$SKYWALKING_AGENT_VER/apache-skywalking-java-agent-$SKYWALKING_AGENT_VER.tgz  -P /tmp;\
-    tar zxf /tmp/apache-skywalking-java-agent-$SKYWALKING_AGENT_VER.tgz -C /app/skywalking --strip-components 1 ;\
-    JMX_EXPORTER_VER=`wget -q https://mirrors.cloud.tencent.com/nexus/repository/maven-public/io/prometheus/jmx/jmx_prometheus_javaagent/maven-metadata.xml -O -|grep '<version>'| tail -1 | awk '{split($1,c,">") ; split(c[2],d,"<") ; print d[1]}'` ;\
-    echo $JMX_EXPORTER_VER;wget -q -c https://mirrors.cloud.tencent.com/nexus/repository/maven-public/io/prometheus/jmx/jmx_prometheus_javaagent/${JMX_EXPORTER_VER}/jmx_prometheus_javaagent-${JMX_EXPORTER_VER}.jar -O /app/jmx/jmx_prometheus_javaagent.jar; \
-    echo -e 'rules:\n- pattern: ".*"\n' > /app/jmx/config.yaml ;\
-    OTEL_VER=$(wget -q https://mirrors.cloud.tencent.com/nexus/repository/maven-public/io/opentelemetry/javaagent/opentelemetry-javaagent/maven-metadata.xml -O -|grep '<version>'|grep -v -i SNAPSHOT| tail -1 | awk '{split($1,c,">") ; split(c[2],d,"<") ; print d[1]}') ;\
-    echo $OTEL_VER;wget -q -c https://mirrors.cloud.tencent.com/nexus/repository/maven-public/io/opentelemetry/javaagent/opentelemetry-javaagent/${OTEL_VER}/opentelemetry-javaagent-${OTEL_VER}.jar -O /app/otel/opentelemetry-javaagent.jar; \
-    wget -c https://arthas.aliyun.com/download/latest_version?mirror=aliyun -O /tmp/arthas-bin.zip ; unzip /tmp/arthas-bin.zip -d /app/arthas ;\
-    ls -alh /tmp;
-
-
-RUN set -eux; adduser -u 8080 -m -s /bin/bash app ;mkdir -p /logs /app /usr/java/jvm ;\
+    ls -alh /tmp;\
+    set -eux; adduser -u 8080 -m -s /bin/bash app ;mkdir -p /logs /app /usr/java/jvm ;\
+    mkdir -p /etc/sudoers.d;echo "app ALL = (root) NOPASSWD:ALL" | sudo tee /etc/sudoers.d/app;chmod 0440 /etc/sudoers.d/* ;\
+    test -f /etc/skel/.bash_profile && ( test -f ~/.bash_profile || cp /etc/skel/.bash_profile ~/ ) ;\
+    test -f /etc/skel/.bashrc && ( test -f ~/.bashrc || cp /etc/skel/.bashrc ~/ ) ;\
     test -f /etc/apk/repositories && sed -i 's/dl-cdn.alpinelinux.org/mirrors.cloud.tencent.com/g' /etc/apk/repositories || true ;\
     dnf install -y bash  ca-certificates curl wget tar jq ;\
     echo -e 'set +eux;\nexport TZ=Asia/Shanghai LANG=en_US.UTF-8 UMASK=0022 CATALINA_HOME=/usr/local/tomcat CATALINA_BASE=/app/tomcat TOMCAT_MAJOR=9 JAVA_HOME=/usr/lib/jvm/temurin-21-jdk' | tee /etc/profile.d/92-jdk.sh ;\
@@ -168,7 +84,7 @@ RUN set -eux; adduser -u 8080 -m -s /bin/bash app ;mkdir -p /logs /app /usr/java
         -Dcom.sun.management.jmxremote.local.only=false -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false " '\
         | tee -a /etc/profile.d/92-jdk.sh ;\
     echo -e 'export JAVA_TOOL_OPTIONS="${JAVA_OPTS} ${JAVA_EXT_OPTS} ${XMX_OPTS} ${JAVA_AGENT_OPTS} ${JAVA_AGENT_SKYWALKING_OPTS}" ' | tee -a /etc/profile.d/92-jdk.sh ;\
-    source /etc/profile.d/92-jdk.sh ;\
+    source /etc/profile.d/92-jdk.sh ; echo $TOMCAT_MAJOR; \
     test -d /usr/lib/jvm/java-1.8-openjdk  && ln -s /usr/lib/jvm/java-1.8-openjdk /usr/lib/jvm/temurin-8-jdk || true; ln -s /usr/lib/jvm/java-21-openjdk /usr/lib/jvm/temurin-21-jdk || true ; \
     test -d /usr/lib/jvm/java-1.8.0-openjdk  && ln -s /usr/lib/jvm/java-1.8.0-openjdk /usr/lib/jvm/temurin-8-jdk || true; ln -s /usr/lib/jvm/java-21-openjdk /usr/lib/jvm/temurin-21-jdk || true ; \
     test -d /usr/lib/jvm/java-1.8-openjdk  &&  ln -s /usr/lib/jvm/java-1.8-openjdk /usr/java/jvm/jdk1.8 || true; ln -s /usr/lib/jvm/java-21-openjdk /usr/java/jdk-21 || true ; \
@@ -192,25 +108,4 @@ CMD ["catalina.sh", "run"]
 
 # docker build -f Dockerfile.jdk-alpine  -t nybase/jdk:alpine-arm64 . &&  docker push nybase/jdk:alpine-arm64
 
-    test -d /usr/lib/jvm/java-1.8-openjdk  && ln -s /usr/lib/jvm/java-1.8-openjdk /usr/lib/jvm/temurin-8-jdk || true; ln -s /usr/lib/jvm/java-21-openjdk /usr/lib/jvm/temurin-21-jdk || true ; \
-    test -d /usr/lib/jvm/java-1.8.0-openjdk  && ln -s /usr/lib/jvm/java-1.8.0-openjdk /usr/lib/jvm/temurin-8-jdk || true; ln -s /usr/lib/jvm/java-21-openjdk /usr/lib/jvm/temurin-21-jdk || true ; \
-    test -d /usr/lib/jvm/java-1.8-openjdk  &&  ln -s /usr/lib/jvm/java-1.8-openjdk /usr/java/jvm/jdk1.8 || true; ln -s /usr/lib/jvm/java-21-openjdk /usr/java/jdk-21 || true ; \
-    test -d /usr/lib/jvm/java-1.8.0-openjdk  &&  ln -s /usr/lib/jvm/java-1.8.0-openjdk /usr/java/jvm/jdk1.8 || true; ln -s /usr/lib/jvm/java-21-openjdk /usr/java/jdk-21 || true ; \
-    mkdir -p /logs /usr/local/tomcat /app/tomcat/conf /app/tomcat/logs /app/tomcat/work /app/tomcat/bin /app/tomcat/lib/org/apache/catalina/util /app/lib /app/tmp /app/bin /app/war /app/jmx /app/skywalking  /app/otel ; \
-    echo "set mouse-=a" >> ~/.vimrc ;  echo "set mouse-=a" >> /home/app/.vimrc ; echo "app"> /etc/cron.allow  ;\
-    rm -rf /usr/lib/jvm/java-21-openjdk/lib/src.zip /usr/lib/jvm/java-1.8.0-openjdk/src.zip ;\
-    chown app:app -R /usr/local/tomcat /app /logs /home/app/.vimrc ; rm -rf /tmp/*
-
-
-WORKDIR /app/war
-
-EXPOSE 8080
-USER   8080
-
-CMD ["catalina.sh", "run"]
-
-
-
-# docker build -f Dockerfile.jdk-alpine  -t nybase/jdk:alpine-amd64 . &&  docker push nybase/jdk:alpine-amd64
-
-# docker build -f Dockerfile.jdk-alpine  -t nybase/jdk:alpine-arm64 . &&  docker push nybase/jdk:alpine-arm64
+# docker run -ti  -e SW_AGENT_COLLECTOR_BACKEND_SERVICES=skywalking:11800 -e JAVA_OPTS="-javaagent:/app/skywalking/skywalking-agent.jar" nybase/jdk:apline-amd64 bash
