--- a/Dockerfile.Kylin
+++ b/Dockerfile.Kylin
@@ -110,4 +110,6 @@ CMD ["catalina.sh", "run"]
 
 # docker build -f Dockerfile.jdk-alpine  -t nybase/jdk:alpine-arm64 . &&  docker push nybase/jdk:alpine-arm64
 
+# docker buildx  build --platform linux/arm64 -t jdk:kylin-arm64 .
+
 # docker run -ti  -e SW_AGENT_COLLECTOR_BACKEND_SERVICES=skywalking:11800 -e JAVA_OPTS="-javaagent:/app/skywalking/skywalking-agent.jar" nybase/jdk:apline-amd64 bash
